last commit inchallah

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,7 @@
         <link href="{{asset('css/style.css')}}" rel="stylesheet">
         {% endblock %}
         {% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
 
     <body>
