--- a/templates/customer/product_details.html.twig
+++ b/templates/customer/product_details.html.twig
@@ -66,12 +66,12 @@
     /* Image du produit */
     .product-image {
         width: 100%;
-        max-width: 500px; /* Limite la taille maximale de l'image */
+        max-width: 200px;
         height: auto;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         object-fit: cover;
-        margin: 0 auto; /* Centrer l'image */
+        margin: 0 auto;
     }
 
     /* Détails du produit */
@@ -153,7 +153,7 @@
         border-radius: 8px;
         height: 180px;
         width: 100%;
-        object-fit: cover;
+        object-fit: contain;
         transition: transform 0.3s ease;
     }
 
