--- a/templates/customer/products.html.twig
+++ b/templates/customer/products.html.twig
@@ -183,7 +183,7 @@
     .product-image {
         width: 100%;
         height: 200px;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 5px;
     }
 
