--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -81,7 +81,7 @@ justify-content-center">
 
       <li class="nav-item">
 
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{ path('app_eventback_index') }}">
 
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center
 justify-content-center">
@@ -90,7 +90,7 @@ justify-content-center">
 
           </div>
 
-          <span class="nav-link-text ms-1">Category</span>
+          <span class="nav-link-text ms-1">Event</span>
 
         </a>
 
@@ -98,7 +98,7 @@ justify-content-center">
 
       <li class="nav-item">
 
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{ ('app_participation_index') }}">
 
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center
 justify-content-center">
@@ -107,7 +107,7 @@ justify-content-center">
 
           </div>
 
-          <span class="nav-link-text ms-1">Product</span>
+          <span class="nav-link-text ms-1">Participant</span>
 
         </a>
 
