--- a/templates/eventback/_delete_form.html.twig
+++ b/templates/eventback/_delete_form.html.twig
@@ -1,4 +1,8 @@
-<form method="post" action="{{ path('app_eventback_delete', {'id': event.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_eventback_delete', {'id': event.id}) }}" 
+      onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
-    <button class="btn">Delete</button>
+    
+    <button type="submit" class="btn btn-danger rounded-pill px-3 py-1 shadow-sm">
+        <i class="bi bi-trash"></i> Delete
+    </button>
 </form>
