--- a/templates/participation/new.html.twig
+++ b/templates/participation/new.html.twig
@@ -9,13 +9,15 @@
     <div class="card shadow-sm border-0 rounded-lg p-4">
         <div class="card-body">
             {{ include('participation/_form.html.twig') }}
+        
+        <div class="mt-3 text-center">
+            <a href="{{ path('app_event_index') }}" class="btn btn-outline-primary px-4">
+                 Back to list
+            </a>
         </div>
     </div>
-
-    <div class="mt-3 text-center">
-        <a href="{{ path('app_participation_index') }}" class="btn btn-outline-primary px-4">
-             Back to list
-        </a>
     </div>
+
+    
 </div>
 {% endblock %}
