--- a/templates/participationback/edit.html.twig
+++ b/templates/participationback/edit.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
     <div class="container-fluid py-5" style="background-color: #fff; border-radius: 10px;">
-       
+        <h1 class="text-center text-primary mb-4"> 📝Edit Participation</h1>
 
-        <div class="card shadow p-4">
+        <div  class="card shadow p-4"> 
             {{ include('participationback/_form.html.twig', {'button_label': 'Update'}) }}
 
             <div class="d-flex justify-content-between mt-4">
