--- a/templates/participationback/show.html.twig
+++ b/templates/participationback/show.html.twig
@@ -3,42 +3,31 @@
 {% block title %}Participation Details{% endblock %}
 
 {% block body %}
-    <div class="container-fluid py-4" style="background-color: #fff; border-radius: 10px;">
-        <h1 class="text-center text-primary mb-4">Participation Details</h1>
-
-        <div class="card shadow p-4">
-            <table class="table table-bordered">
-                <tbody>
-                    <tr>
-                        <th class="bg-light">Id</th>
-                        <td>{{ participation.id }}</td>
-                    </tr>
-                    <tr>
-                        <th class="bg-light">Name</th>
-                        <td>{{ participation.nom }}</td>
-                    </tr>
-                    <tr>
-                        <th class="bg-light">Email</th>
-                        <td>{{ participation.email }}</td>
-                    </tr>
-                    <tr>
-                        <th class="bg-light">Phone</th>
-                        <td>{{ participation.telephone }}</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <div class="d-flex justify-content-between mt-3">
-                <a href="{{ path('app_participationback_index') }}" class="btn btn-secondary">
-                    <i class="bi bi-arrow-left"></i> Back to List
-                </a>
-                <a href="{{ path('app_participationback_edit', {'id': participation.id}) }}" class="btn btn-warning">
-                    <i class="bi bi-pencil"></i> Edit
-                </a>
-            </div>
-
-            <div class="mt-3 text-center">
-                {{ include('participationback/_delete_form.html.twig') }}
+    <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+        <div class="col-md-8">
+            <div class="card shadow-lg border-0 rounded-lg">
+                <div class="card-header bg-primary text-white text-center">
+                    <h3><i class="bi bi-person-circle"></i> 📌Participation Details</h3>
+                </div>
+                <div class="card-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><i class="bi bi-hash text-primary"></i> <strong>ID:</strong> {{ participation.id }}</li>
+                        <li class="list-group-item"><i class="bi bi-person-fill text-primary"></i> <strong>Name:</strong> {{ participation.nom }}</li>
+                        <li class="list-group-item"><i class="bi bi-envelope-fill text-primary"></i> <strong>Email:</strong> {{ participation.email }}</li>
+                        <li class="list-group-item"><i class="bi bi-telephone-fill text-primary"></i> <strong>Phone:</strong> {{ participation.telephone }}</li>
+                    </ul>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="{{ path('app_participationback_index') }}" class="btn btn-secondary">
+                        <i class="bi bi-arrow-left"></i> Back
+                    </a>
+                    <a href="{{ path('app_participationback_edit', {'id': participation.id}) }}" class="btn btn-warning">
+                        <i class="bi bi-pencil"></i> Edit
+                    </a>
+                    <div>
+                        {{ include('participationback/_delete_form.html.twig') }}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
